Fix footer behind sidebar: add !important + cache bust v2.2

--- a/reddash/app/static/assets/css/trini-custom.css
+++ b/reddash/app/static/assets/css/trini-custom.css
@@ -252,16 +252,16 @@ h6,
 /* --- Footer Enhancements --- */
 @media (min-width: 1200px) {
     .g-sidenav-show .footer {
-        margin-left: 17.125rem;
+        margin-left: 17.125rem !important;
         transition: all 0.2s ease-in-out;
     }
 
     .g-sidenav-hidden .footer {
-        margin-left: 7.5rem;
+        margin-left: 7.5rem !important;
     }
 
-    .g-sidenav-hidden .navbar-vertical:hover~.footer {
-        margin-left: 17.125rem;
+    .g-sidenav-hidden .navbar-vertical:hover ~ .footer {
+        margin-left: 17.125rem !important;
     }
 }
 
